force-app/main/default/objects/ampi__Activities__c/ampi__Activities__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Customize the interface for the Activities page by selecting whether or not to display buttons and/or provide a view-only interface for specific users/profiles</description>
    <label>Activities</label>
</CustomObject>