force-app/main/default/objects/ampi__Activities__c/fields/ampi__Hide_Add_New_Activity_Button__c.field-meta.xml
<CustomField>
    <fullName>ampi__Hide_Add_New_Activity_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Control visibility of Activity Button</description>
    <inlineHelpText>Control visibility of Activity Button</inlineHelpText>
    <label>Hide Add New Activity Button</label>
    <type>Checkbox</type>
</CustomField>