force-app/main/default/objects/ampi__Activities__c/fields/ampi__Hide_Delete_Icon__c.field-meta.xml
<CustomField>
    <fullName>ampi__Hide_Delete_Icon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls visibility of Delete icon on ActivityChart Aura Component, and the Delete button in the Edit pop-up of Activity Lightning Web Component</description>
    <inlineHelpText>Control visibility of Delete Icon</inlineHelpText>
    <label>Hide Delete Actions</label>
    <type>Checkbox</type>
</CustomField>