force-app/main/default/objects/ampi__Activities__c/fields/ampi__Hide_Display_Baseline_Button__c.field-meta.xml
<CustomField>
    <fullName>ampi__Hide_Display_Baseline_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Control visibility of Display Baseline Button on the Activity Lightning Web Component.</description>
    <inlineHelpText>Control visibility of Display Baseline Button on the Activity Lightning Web Component.</inlineHelpText>
    <label>Hide Display Baseline Button</label>
    <type>Checkbox</type>
</CustomField>