force-app/main/default/objects/ampi__Activities__c/fields/ampi__Hide_Edit_Icon__c.field-meta.xml
<CustomField>
    <fullName>ampi__Hide_Edit_Icon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls visibility of Edit icon on ActivityChart Aura Component, and the Save button in the Edit pop-up of Activity Lightning Web Component. When this is saved as TRUE, Activity Lightning Web Component displays read-only fields in the Edit pop-up</description>
    <inlineHelpText>Control visibility of Edit Icon</inlineHelpText>
    <label>Hide Edit Actions</label>
    <type>Checkbox</type>
</CustomField>